Added CSRFToken security to important requests This is to prevent CSRF attacks from the few browsers that don't have a samesite attribute in the alexedwards/scs package.

--- a/ui/html/pages/home.html
+++ b/ui/html/pages/home.html
@@ -4,6 +4,7 @@
 <h2>Class List</h2>
 <div class="search-wrapper">
     <form class="search-bar" action="/notification/add" method="POST">
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
         <select id="classList" name="classId">
             {{range .Classes}}
                 <option value="{{.ClassID}}">{{.Name}}</option>
@@ -19,6 +20,7 @@
             <td><a href="{{.Link}}">{{.Name}}</a></td>
             <td>
                 <form action="/notification/delete/{{.NotificationID}}" method="POST">
+                    <input type="hidden" name="csrf_token" value="{{$.CSRFToken}}">
                     <button type="submit">Delete</button>
                 </form>
             </td>
